maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:58: error: ';' expected but 'else' found.
    else if (x < xMax && getIndication(x + 1, y) < getIndication(x, y) && !aMurOuest(x + 1, y))
    ^JediEscaper:60: error: ';' expected but 'else' found.
    else if (y > 0 && getIndication(x, y - 1) < getIndication(x, y) && !aMurNord(x, y))
    ^JediEscaper:62: error: ';' expected but 'else' found.
    else if (y < yMax && getIndication(x, y + 1) < getIndication(x, y) && !aMurNord())
    ^